# mnemosyne

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  DEVOPS.md  MANIFEST.in  README.md  UPDATING.md  __init__.py  analyze_prs.py  ceo-brief-2026-07-13.html  ceo-brief-issue-analysis.md  mnemosyne_codebase_surface.json  open_issues_summary.md  pyproject.toml  run_beam_clean.sh  setup.py  test_orchestration_complex.py  test_orchestrator.py
.planning/: STATE.md
docs/: api-reference.md  benchmarking.md  comparison.md  configuration.md  hermes-integration.md  hermes-llm-integration.md  mnemosyne-for-dummies.md
hermes_memory_provider/: __init__.py  cli.py  hermes_llm_adapter.py  plugin.yaml  sync_adapter.py
hermes_plugin/: __init__.py  plugin.yaml  tools.py
integrations/hermes/: plugin.yaml  pyproject.toml
integrations/hermes/src/mnemosyne_hermes/: __init__.py  cli.py  install.py  persona_adapter.py  persona_tools.py  sync_adapter.py  tools.py
integrations/hermes/tests/: test_cli_bank.py  test_install_hermes.py  test_persona_plugin_registration.py  test_system_prompt.py
mnemosyne/: __init__.py  cli.py  diagnose.py  doctor.py  install.py  mcp_server.py  mcp_tools.py  repair.py  runtime_diagnostics.py  tool_schemas.py
results/: beam_e2e_results.json  beam_e2e_summary.json  paired_outcomes.jsonl
scripts/: post_update.py
tests/: conftest.py  test_ab_toggles.py  test_beam.py  test_c4_recall_diagnostics.py  test_cli_errors.py  test_cli_host_llm_standalone_loading.py  test_config_cross_session_runtime.py  test_config_profiles.py  test_cross_session_hot_reload.py  test_diagnose_optional_deps.py  test_doctor.py  test_doctor_cli.py  test_e2_remember_batch_enrichment.py  test_embedding_api_retry.py  test_embedding_prefixes.py  (+30 more)
(+42 files in other folders)
